--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="index.css">
 </head>  
 <body>
-  <p id="placeholder">
+  <p id="theResult">
   
   </p>
   <button id="button">Roll Dice</button>
