--- a/static/index.html
+++ b/static/index.html
@@ -9,5 +9,6 @@
   </p>
   <button id="button">Roll Dice</button>
   <script src="dice.js"></script>
+  <script src="ui.js"></script>
 </body>
 </html>
