--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
 <body>
   <p id="theResult">
   </p>
-  <button id="button">Roll Dice</button>
+  <button id="button">Roll Die</button>
   <script src="dice.js"></script>
   <script src="ui.js"></script>
 </body>
