--- a/static/index.html
+++ b/static/index.html
@@ -5,10 +5,11 @@
     <link rel="stylesheet" href="index.css">
 </head>  
 <body>
-  <p id="theResult">
-  </p>
-  <button id="button">Roll Die</button>
-  <script src="dice.js"></script>
-  <script src="ui.js"></script>
-</body>
-</html>
+    <p id="placeholder">
+    
+    </p>
+    <button id="button">Roll Dice</button>
+    <script src="dice.js"></script>
+    <script src="ui.js"></script>
+  </body>
+  </html>
