--- a/static/index.html
+++ b/static/index.html
@@ -4,13 +4,12 @@
     <title>Dice Game</title>
     <link rel="stylesheet" href="index.css">
 </head>  
-<body onload="printNumber(number)">
+<body onload="roll()">
     <p id="ph">
     
     </p>
     <button id="button">Roll Dice</button>
     <script src="dice.js"></script>
-    <script src="ui.js"></script>
-    
+
   </body>
   </html>
