--- a/static/index.html
+++ b/static/index.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
+<!--
+
+ Author: Kyle Moses
+
+ Class:  Software Engineering
+
+ Project: Lab 2 / Dice Rolloer
+
+ Description: This is the first version of my Dice Roller application and is being submitted as part of Lab 2.
+
+-->
 <html>
 <head>
-    <title>Dice Game</title>
+    <title>Dice Roller</title>
     <link rel="stylesheet" href="index.css">
 </head>  
-<body onload="roll()">
+<body onload="printNumber(result)">
     <p id="ph">
     
     </p>
