--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
     <title>Dice Roller</title>
     <link rel="stylesheet" href="index.css">
 </head>  
-<body onload="printNumber(result)">
+<body>
     <p id="ph">
     
     </p>
