--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
     <p id="ph">
     
     </p>
-    <button id="button">Roll</button>
+    <button id="button">Roll Dice</button>
     <script src="dice.js"></script>
   </body>
   </html>
