--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,8 @@
     <p id="ph">
     
     </p>
-    <button id="button">Roll Dice</button>
+    <button id="button">Roll</button>
     <script src="dice.js"></script>
+    button.click();
   </body>
   </html>
