--- a/static/index.html
+++ b/static/index.html
@@ -19,7 +19,8 @@
     
     </p>
     <button id="button">Roll</button>
-    <script src="dice.js"></script>
-    button.click();
+    <script src="dice.js">
+        button.click();
+    </script>
   </body>
   </html>
