--- a/static/index.html
+++ b/static/index.html
@@ -14,13 +14,11 @@
     <title>Dice Roller</title>
     <link rel="stylesheet" href="index.css">
 </head>  
-<body>
+<body onload(button.click())>
     <p id="ph">
     
     </p>
     <button id="button">Roll</button>
-    <script src="dice.js">
-        button.click();
-    </script>
+    <script src="dice.js"></script>
   </body>
   </html>
