--- a/static/index.html
+++ b/static/index.html
@@ -14,11 +14,12 @@
     <title>Dice Roller</title>
     <link rel="stylesheet" href="index.css">
 </head>  
-<body onload(button.click())>
+<body onload="button.click()">
     <p id="ph">
     
     </p>
     <button id="button">Roll</button>
     <script src="dice.js"></script>
+    <p>Click 'Roll' to roll the 6-sided die</p>
   </body>
   </html>
