--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
 
  Class:  Software Engineering
 
- Project: Lab 2 / Dice Rolloer
+ Project: Lab 2 / Dice Roller
 
  Description: This is the first version of my Dice Roller application and is being submitted as part of Lab 2.
 
